# difymcp-strandsagent-demo

./: README.md
aws-mcp-servers-samples/: .gitignore  README.md  requirements.txt
aws-mcp-servers-samples/dify_mcp_servers/: README.md  cli.txt  dify_mcp_server.py  requirements.txt
strands-web-ui/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.py  introduction.md  pyproject.toml  requirements.txt  setup.py  test_audio_integration.py  test_tool_loading.py
strands-web-ui/config/: config.json  mcp_config.json
strands-web-ui/docs/: audio_transcription_guide.md  integrated_audio_feature.md
strands-web-ui/src/strands_web_ui/: __init__.py  app.py  mcp_server_manager.py
strands-web-ui/src/strands_web_ui/extensions/: __init__.py  audio_transcriber.py
strands-web-ui/src/strands_web_ui/handlers/: __init__.py  streamlit_handler.py
strands-web-ui/src/strands_web_ui/tools/: __init__.py
strands-web-ui/src/strands_web_ui/utils/: __init__.py  config_loader.py  custom_logger.py  tool_loader.py
strands-web-ui/static/css/: style.css
strands-web-ui/tests/: __init__.py  test_config_loader.py  test_mcp_server_manager.py
